1998-10-27  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-item.c (get_bounds): New internal function to compute
	the bounding box of the icon text item.
	(recompute_bounding_box): Use get_bounds().
	(gnome_icon_text_item_get_type): The object initialization
	function did nothing, so removed it and use NULL instead.
	(iti_bounds): Use get_bounds() and return the correct bounds.

1998-10-27  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-item.c (iti_bounds): Realize the item if we are asked
	for the bounds before realization.  Federico, this fixes the
	problem you had without having to connect to the realize signal
	(which should be very expensive in terms of memory use for every
	icon). 

	(iti_realize): Remove unused Window
	parameter. 

Mon Oct 26 16:53:04 1998  Owen Taylor  <otaylor@redhat.com>

	* gnome-stock.c: Use gtk_widget_shape_combine_mask() instead
	of gdk_window_", so theme switching doesn't remove
	shape.

1998-10-25  Kjartan Maraas  <kmaraas@fib.hl.no>

	* gnome-font-picker.c: Removed #include "gnome-font-picker-ico.h"
	to make it compile again
	
1998-10-24  David Abilleira  <odaf@nexo.es>

	* gnome-font-picker.c: Now it uses GNOME_STOCK_PIXMAP_FONT instead of
        the one in gnome-font-picer-ico.png
        
	* gnome-font-picker-ico.png: Removed
	* gnome-font-picker-ico.h: Removed

1998-10-24  Martin Baulig  <martin@home-of-linux.org>

	* pixmaps/Makefile.am: Make `gnome-stock-imlib.h' depend upon
	the Makefile.am so it will be rebuild if you add new files.

Sat Oct 24 13:09:50 CEST 1998  Eckehard Berns  <eb@berns.i-s-o.net>

	* pixmaps/stock_font.png: new stock icon
	* pixmaps/Makefile.am: added stock_font.png
	* gnome-stock.[ch]: added defines for stock_font.png (icon, menu and
	button)
	* stock_demo.c: added sample stock_font icons and button

1998-10-23  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c (icon_event): Mark the events as processed
	when calling toggle_icon.
